apps/odoo/odoo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoo
spec:
  selector:
    app: odoo
  ports:
    - name: http
      port: 8069
      targetPort: 8069
